k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stock-mldl
  labels:
    app.kubernetes.io/managed-by: kubectl
    project: stock-mldl
